monitor-k8s.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kafka-external-svc
  namespace: monitoring
subsets:
- addresses:
  - ip: 172.20.0.1 # sudo docker inspect kind-control-plane | grep Gateway
  ports:
  - name: jmx-metrics
    port: 7071
  - name: lag-metrics
    port: 9308
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-external-svc
  namespace: monitoring
  labels:
    app: kafka-metrics
spec:
  ports:
  - name: jmx-metrics
    port: 7071
    targetPort: 7071
  - name: lag-metrics
    port: 9308
    targetPort: 9308
